<resources>
    <string name="app_name">FamilyHouse</string>
    <string name="linens">Linen Request</string>
    <string name="alerts">Alerts</string>
    <string name="events">Events</string>
    <string name="faq">FAQ</string>
    <string name="settingsbutton">Go to settings ></string>
    <string name="settings">Settings</string>
    <string name="contact">Contact</string>
    <string name="settingstext1">Please choose which house you are satying at  to receive important alerts and information about events.</string>
    <string name="settingstext2">Select houses to be notified of their events.</string>
    <string name="settingstext3">To receive alerts and events, choose a house.</string>
    <string name="Neville">Neville</string>
    <string name="ShadySide">Shadyside</string>
    <string name="UniversityPlace">University Place</string>
    <string-array name="places">
        <item>Neville</item>
        <item>ShadySide</item>
        <item>University Place</item>
    </string-array>
    <string-array name="places2">
        <item>Neville</item>
        <item>ShadySide</item>
        <item>University Place</item>
    </string-array>
    <string name="general">General</string>
    <string name="dropdown1">Select Your House</string>
    <string name="upcoming_events">Upcoming Events!</string>
</resources>
