<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button8"
        android:layout_width="419dp"
        android:layout_height="131dp"
        android:backgroundTint="#d8bf49"
        android:text="@string/faq"
        android:textAlignment="textStart"
        android:textColor="#fffdf9"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button7" />

    <Button
        android:id="@+id/button6"
        android:layout_width="423dp"
        android:layout_height="133dp"
        android:backgroundTint="#e26666"
        android:text="@string/alerts"
        android:textAlignment="textStart"
        android:textColor="#fffdf9"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <Button
        android:id="@+id/button"
        android:layout_width="420dp"
        android:layout_height="132dp"
        android:backgroundTint="#6fd1be"
        android:text="@string/linens"
        android:textAlignment="textStart"
        android:textColor="#fffdf9"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button7"
        android:layout_width="418dp"
        android:layout_height="122dp"
        android:backgroundTint="#39b4d1"
        android:text="@string/events"
        android:textAlignment="textStart"
        android:textColor="#fffdf9"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button6" />

    <Button
        android:id="@+id/button4"
        android:layout_width="46dp"
        android:layout_height="39dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="525dp"
        android:background="#6fd1be"
        android:foreground="@android:drawable/stat_sys_phone_call"
        android:onClick="@string/settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.736"
        tools:targetApi="m" />

    <Button
        android:id="@+id/button3"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="426dp"
        android:layout_height="112dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#474545"
        android:text="@string/settingsbutton"
        android:textAlignment="viewEnd"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textDirection="firstStrongRtl"
        android:verticalScrollbarPosition="defaultPosition"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.375"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>